# board-game-scraper

./: .cruft.json  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-spark  LICENSE  MANIFEST.in  Pipfile  README.md  compose.yaml  curl_hotness.sh  docker-compose.yaml  fields.yaml  full_merge.sh  link.sh  merge.sh  mkdocs.yml  news.sh  processes.sh  pyproject.toml  requirements-top.txt  requirements.txt  run_all.sh  run_scraper.sh  run_scrapers.sh  scrape_rankings.sh  scrape_sites.py  scrape_sites.sh  scrapinghub.yml  scrapy.cfg  setup.py  shuffle.sh  sync_logs.sh
.github/: FUNDING.yml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: cookiecutter.yml  test.yml
analytics/: best_worst_games.ipynb  recommend.py
board_game_scraper/: __init__.py  __main__.py  __version__.py  aggregations.yaml  cluster.py  download_bgg_dump.py  extensions.py  full_merge.py  hello.py  items.py  loaders.py  loggers.py  merge.py  merge_polars.py  middlewares.py  news.py  pipelines.py  prefixes.py  pubsub_pull.py  settings.py  split.py  utils.py  version_env.py  zip_rankings.py
board_game_scraper/spiders/: bga.py  bgg.py  bgg_geeklist.py  bgg_hotness.py  bgg_json_rankings.py  bgg_rankings.py  dbpedia.py  luding.py  review.py  spielen.py  wiki_stats.py  wikidata.py
board_game_scraper_v2/: cluster.py  fields.yaml  settings.py  split.py
board_game_scraper_v2/spiders/: bgg_json_rankings.py  bgg_rankings.py
cron/: games.recommend.bgg_ranked_csv.plist  games.recommend.bgg_ranked_csv.service  games.recommend.bgg_ranked_csv.timer  games.recommend.curl_hotness.plist  games.recommend.curl_hotness.service  games.recommend.curl_hotness.timer  games.recommend.download_bgg_dump.plist  games.recommend.download_bgg_dump.service  games.recommend.download_bgg_dump.timer
docs/: api_docs.md
ludoj/: __init__.py  cluster.py  dedupe.py  extensions.py  items.py  json.py  loaders.py  merge.py  middlewares.py  pipelines.py  recommend.py  settings.py  sort.py  utils.py
ludoj/spiders/: bgg.py  dbpedia.py  luding.py  spielen.py  wikidata.py
ludoj_scraper/: __init__.py  __version__.py  cluster.py  extensions.py  items.py  loaders.py  merge.py  middlewares.py  pipelines.py  prefixes.py  settings.py  split.py  utils.py
ludoj_scraper/spiders/: bga.py  bgg.py  dbpedia.py  luding.py  spielen.py  wikidata.py
src/board_game_scraper/: __init__.py  __main__.py  download_bgg_dump.py  exporters.py  extensions.py  items.py  loaders.py  middlewares.py  pipelines.py  settings.py
src/board_game_scraper/spiders/: bgg.py  bgg_hotness.py
src/board_game_scraper/utils/: __init__.py  dates.py  files.py  ids.py  iterables.py  parsers.py  strings.py  urls.py
v2/: .pylintrc  Dockerfile-spark  MANIFEST.in  Pipfile  merge.sh  scrapy.cfg  setup.py
v2/board_game_scraper/: __main__.py  __version__.py  full_merge.py  middlewares.py  zip_rankings.py
v2/board_game_scraper/spiders/: bgg_geeklist.py  bgg_hotness.py  bgg_rankings.py  dbpedia.py  spielen.py  wikidata.py
